force-app/main/default/objects/Deal_Sheet__c/fields/Bird_dog__c.field-meta.xml
<CustomField>
    <fullName>Bird_dog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bird - dog</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Sheets (Bird - dog)</relationshipLabel>
    <relationshipName>Deal_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>