force-app/main/default/objects/Deal_Sheet__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Color_Type</valueSetName>
    </valueSet>
</CustomField>