force-app/main/default/objects/Deal_Sheet__c/fields/Customer_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approved_Date__c</fullName>
    <label>Customer Approved Date</label>
    <type>DateTime</type>
</CustomField>