force-app/main/default/objects/Deal_Sheet__c/fields/Deal_Sheet_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sheet_Declaration__c</fullName>
    <label>Deal Sheet Declaration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>