force-app/main/default/objects/Deal_Sheet__c/fields/DLR_DO_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>DLR_DO_Approved_Date__c</fullName>
    <label>DLR/DO Approved Date</label>
    <type>DateTime</type>
</CustomField>