force-app/main/default/objects/Deal_Sheet__c/fields/DO_DLR__c.field-meta.xml
<CustomField>
    <fullName>DO_DLR__c</fullName>
    <formula>Owner:User.Contact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DO/DLR</label>
    <type>Text</type>
</CustomField>