force-app/main/default/objects/Deal_Sheet__c/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <label>Finance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>