force-app/main/default/objects/Deal_Sheet__c/fields/First_Payment__c.field-meta.xml
<CustomField>
    <fullName>First_Payment__c</fullName>
    <label>First Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>