force-app/main/default/objects/Deal_Sheet__c/fields/The_Buyer__c.field-meta.xml
<CustomField>
    <fullName>The_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>The Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Sheets</relationshipLabel>
    <relationshipName>Deal_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>